# globaltalk

./: .gitignore  Dockerfile  Makefile  README.md  airconfig.py  airprefs.py  btree.py  catalog.py  docker-compose-example.yml  macbinary.py  macdisk.py  macfile.py  mactcp.py  mdb.py  partition.py  qemu-GlobalTalk.command  setup.cfg  start-globaltalk  start-qemu
globaltalk/: __init__.py  airconfig.py  airprefs.py  btree.py  catalog.py  macbinary.py  macdisk.py  macfile.py  macresource.py  mactcp.py  mdb.py  partition.py  start.py
