[metadata]
name = globaltalk
version = 1.0
author = Chris Osborn
author_email = fozztexx@fozztexx.com
description = Tools and library for manipulating Mac disk image and reconfiguring Apple Internet Router
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your-package-homepage/
license = GPL-3.0-or-later
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent

[options]
packages = find:
install_requires =
  rsrcdump

[options.entry_points]
console_scripts =
  start-globaltalk = globaltalk.start:main
